decode/03_javascript-fundamentals/archived/syntax-errors/test/problem2.js
let expect = require('chai').expect;

let f = require('../../src/syntax-errors/problem2.js');

console.log("Everything OK!");